K-Means, PCA and Agglomerative Clustering with Mall Customers dataset.

--- a/clustering_at.ipynb
+++ b/clustering_at.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDUfo7aINAk7e6KRQnJMby",
+      "authorship_tag": "ABX9TyOIedRPTGTw+bMmUXctBYZN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "import matplotlib.pyplot as plt\n",
         "from scipy.cluster.hierarchy import dendrogram, linkage, fcluster\n",
         "from sklearn.manifold import TSNE\n",
-        "from sklearn.cluster import KMeans, AgglomerativeClustering\n",
+        "from sklearn.cluster import KMeans, AgglomerativeClustering, DBSCAN\n",
         "from sklearn.decomposition import PCA"
       ],
       "metadata": {
@@ -317,15 +317,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "melvrYUG9BEN"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
